# nnqr

./: .gitignore  AGENTS.md  CLAUDE.md  mise.toml  neovim.sh  neovim_mac.sh  nnqr_implementation.md  nnqr_plan.md  nnqr_prd.md  readme.md  task_list.md  testing.md  todo-6-9-25.md  ui_research.md
.beads/: .gitignore  (+1 more)
rust/bevy/: BOARD_COLOR_PALETTE_UPDATE.md  BOARD_VISIBILITY_FIXES.md  BUILD_SUMMARY.md  CODE_QUALITY_REPORT.md  CROSS_COMPILE_SUCCESS.md  Cargo.toml  DOUBLE_CLICK_FIX_SUMMARY.md  FINAL_TURN_ENDING_FIX_SUMMARY.md  NUSHELL_TOOLS.md  PHASE6_CODE_QUALITY_REPORT.md  PIECE_POSITIONING_FIX.md  QUICK_REFERENCE.md  README.md  TURN_ENDING_THRESHOLD_98_PERCENT_FIX.md  TURN_SWITCHING_BUG_FIX.md  UI_AND_HIGHLIGHTING_FIXES.md  VISUAL_ARTIFACT_FIX.md  WINDOWS_BUILD_SUMMARY.md  automated_test_results.md  build_windows.ps1  build_windows.sh  build_windows_docker.sh  build_windows_zig.sh  deploy_windows.sh  final_test.txt  fix_critical_warnings.nu  fix_critical_warnings.sh  fix_unused_warnings.nu  fix_unused_warnings.sh  game_output.txt  mise.toml  qdev.nu  qgit.nu  temp_allow_attributes.txt  test_powers.nu  ui_updates_status.md
rust/bevy/.claudio/: getting-started.md  implementation_plan.md  summary.md
rust/bevy/bug_reports/: 004_bug_report_power_pickup.md  005_no_visible_powers.md  006_player1_turn_not_ending.md  008_3d_board_issue.md  010_3dboard_valid_movement_indicators_obscure.md  010_piece_visibility_analysis.md
rust/bevy/instructions/: detailed_task_list.md  implementation_status.md  nnqr_implementation.md  nnqr_plan.md  phase_structure_summary.md  task_list.md
(+671 files in other folders)
