[package]
name = "quadradius"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "quadradius"
path = "src/lib.rs"

[[bin]]
name = "quadradius"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.12.0", features = ["default"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
# winres = "0.1"  # Commented out for now

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.release-windows]
inherits = "release"
strip = false  # Windows doesn't like stripped binaries

[package.metadata.winres]
ProductName = "Quadradius"
FileDescription = "Strategic board game with 70+ power-ups"
LegalCopyright = "Copyright 2024"
OriginalFilename = "quadradius.exe"
